--- a/main page/index.html
+++ b/main page/index.html
@@ -43,7 +43,7 @@
 <div class="artists">
   <img src="img/bf7d766f3c679508ff3b5f2f03374d46_L%20(1).jpg">
   <div class="artists-layer_top artists-layer_scale">
-  <div class="artists-text">Вы можете смешивать настройки с примерами с приведенными выше эффектами и получать комбинации, как показано ниже.</div>
+  <div class="artists-text">текст</div>
   </div>
 </div>
   </a>
@@ -52,7 +52,7 @@
 <div class="artists">
   <img src="img/291887@2x.jpeg">
   <div class="artists-layer_top artists-layer_scale">
-  <div class="artists-text">Вы можете смешивать настройки с примерами с приведенными выше эффектами и получать комбинации, как показано ниже.</div>
+  <div class="artists-text">текст</div>
   </div>
 </div>
   </a>
@@ -61,7 +61,7 @@
 <div class="artists">
   <img src="img/mone+%20(1).jpg">
   <div class="artists-layer_top artists-layer_scale">
-  <div class="artists-text">Вы можете смешивать настройки с примерами с приведенными выше эффектами и получать комбинации, как показано ниже.</div>
+  <div class="artists-text">текст</div>
   </div>
 </div>
   </a>
@@ -71,7 +71,7 @@
 <div class="artists">
   <img src="img/image539_2.jpg">
   <div class="artists-layer_top artists-layer_scale">
-  <div class="artists-text">Вы можете смешивать настройки с примерами с приведенными выше эффектами и получать комбинации, как показано ниже.</div>
+  <div class="artists-text">текст</div>
   </div>
 </div>
   </a>
@@ -82,7 +82,7 @@
 <div class="artists">
   <img src="img/420974.jpg">
   <div class="artists-layer_top artists-layer_scale">
-  <div class="artists-text">Вы можете смешивать настройки с примерами с приведенными выше эффектами и получать комбинации, как показано ниже.</div>
+  <div class="artists-text">текст</div>
   </div>
 </div>
   </a>
@@ -92,7 +92,7 @@
 <div class="artists">
   <img src="img/2d11cb5ab0e32de2f91b0df6a57b2c60%20(1).jpg">
   <div class="artists-layer_top artists-layer_scale">
-  <div class="artists-text">Вы можете смешивать настройки с примерами с приведенными выше эффектами и получать комбинации, как показано ниже.</div>
+  <div class="artists-text">текст</div>
   </div>
 </div>
   </a>    
