--- a/main page/index.html
+++ b/main page/index.html
@@ -20,7 +20,7 @@
 	<img class="fullscreen" src="img/arhitektura_nebo_chb_138510_1920x1080.jpg" alt="">
 	
 	<section id="header">
-		<div class="lefthead"><img src="img/images-33%20(1).jpg" alt=""></div>
+		<div class="lefthead"><img src="img/images-331.png" alt=""></div>
 		<div class="center">
 			<div class="top">
 				<div class="renctangle">
@@ -34,7 +34,7 @@
 				<a href="#">Контакты</a>
 			</div>
 		</div>
-		<div class="righthead"><img src="img/%D0%91%D0%B5%D0%B7%20%D0%BD%D0%B0%D0%B7%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F.jpg%20(1).jfif" alt=""></div>
+		<div class="righthead"><img src="img/lefthead.png" alt=""></div>
         
   
 	</section>
