--- a/main page/index.html
+++ b/main page/index.html
@@ -80,38 +80,137 @@
        </div>
     </div>
     
-	<div class="block">
-  <div class="title">Ваши отзывы</div>
-  <div class="slider__inner">
-     <div class="item">
-      <div class="item__inner">
-        <div class="item__header">
-        <div class="item__img"></div>
-         <div class="item__title">Title</div>
-      </div>
-      <div class="item__text"> Lorem ipsum dolor sit amet.</div>
-      </div>
-    </div>
-     <div class="item">
-      <div class="item__inner">
-        <div class="item__header">
-        <div class="item__img"></div>
-         <div class="item__title">Title</div>
-      </div>
-      <div class="item__text">Lorem ipsum dolor sit amet.</div>
-      </div>
-    </div>
-     <div class="item">
-      <div class="item__inner">
-        <div class="item__header">
-        <div class="item__img"></div>
-         <div class="item__title">Title</div>
-      </div>
-      <div class="item__text">Lorem ipsum dolor sit amet.</div>
-      </div>
-    </div>
-  </div>
+	<div id="slider">
+
+<div id="slider_box">
+
+<ul>
+
+<li class="img_1">
+
+<img class="slider_item" src="img/screen.jpg" alt="">
+
+</li>
+
+<li class="img_2">
+
+<img class="slider_item" src="img/screen.jpg" alt="">
+
+</li>
+
+<li class="img_3">
+
+<img class="slider_item" src="img/screen.jpg" alt="">
+
+</li>
+
+<li class="img_4">
+
+<img class="slider_item" src="img/screen.jpg" alt="">
+
+</li>
+
+<li class="img_5">
+
+<img class="slider_item" src="img/screen.jpg" alt="">
+
+</li>
+
+<li class="img_6">
+
+<img class="slider_item" src="img/screen.jpg" alt="">
+
+</li>
+
+<li class="img_7">
+
+<img class="slider_item" src="img/screen.jpg" alt="">
+
+</li>
+
+</ul>
+
 </div>
+
+<!-- slider_box-->
+
+<div id="nav_slider">
+
+<div id="left_nav">
+
+<img src="img/arrow1.png" alt="">
+
+</div>
+
+<div id="right_nav">
+
+<img src="img/arrow.png" alt="">
+
+</div>
+
+</div>
+
+</div>
+
+<!-- slider-->
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+
+<script>
+
+function Slider(width_li, margin_right_li, col_view_img) {
+
+var step = width_li + margin_right_li,
+
+slider_box_with = col_view_img * step - margin_right_li,
+
+$col_img = $("#slider_box>ul>li").length,
+
+col_main_left = 0,
+
+max_col_main_left = $col_img * step;
+
+$("#slider_box").width(slider_box_with);
+
+$("#slider_box>ul>li").width(width_li).css("margin-right", margin_right_li);
+
+$("#left_nav").click(function() {
+
+if (col_main_left == 0) {
+
+col_main_left = -max_col_main_left + col_view_img * step;
+
+} else {
+
+col_main_left = col_main_left + step;
+
+}
+
+$("#slider_box>ul").css("margin-left", col_main_left + "px");
+
+});
+
+$("#right_nav").click(function() {
+
+if (-col_main_left == max_col_main_left - col_view_img * step) {
+
+col_main_left = 0;
+
+} else {
+
+col_main_left = col_main_left - step;
+
+}
+
+$("#slider_box>ul").css("margin-left", col_main_left + "px");
+
+});
+
+}
+
+$(Slider(200, 10, 3));
+
+</script>
            
    
       <img class="metro" src="img/0wq6Ce_-N7Q5665%20(2).jpg" alt= "" width=100%>
