--- a/ЛБ13/video.html
+++ b/ЛБ13/video.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <style type="text/css">
-        
+        a{
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
- <h1>Я требую криешки:) ~ Настя</h1>
+    <h1><a href="7.html">Я требую криешки:) ~ Настя</a></h1>
   <video controls width="300" src="images/video.MOV"></video>
   <video controls width="300" src="images/video2.MOV"></video>
 </body>
