--- a/ЛБ13/7.html
+++ b/ЛБ13/7.html
@@ -10,6 +10,11 @@
         body {
             position: relative;
         }
+        
+        img{
+            height: 400px;
+            width: 400px;
+        }
 
         .lang {
             position: absolute;
@@ -52,6 +57,7 @@
 </head>
 
 <body>
+   <img src="images/krieshki.jpg">
     <div class="lang">
         <h2>Балтославяниские языки</h2>
         <p style="margin: 0 0 0 20px; ">1. Славянские языки</p>
