--- a/ЛБ13/video.html
+++ b/ЛБ13/video.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <style type="text/css">
+        a{
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
     <h1><a href="7.html">Я требую криешки:) ~ Настя</a></h1>
