--- a/ЛБ19/index.html
+++ b/ЛБ19/index.html
@@ -428,7 +428,7 @@ body {
 
 
 <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script> 
-<script>
+<script type="text/javascript">
 'use strict';
 var activeIndex = 0;
 var limit = 0;
